--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "",
+  "description": "Phelim's website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next dev -H 0.0.0.0",
+    "build": "next build",
+    "prettier": "prettier -write",
     "lint": "next lint"
   },
   "keywords": [],
   "author": "Phelim<ng.tthanh18@gmail.com>",
-  "license": "NTT",
+  "license": "UNLICENSED",
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
